--- a/index.html
+++ b/index.html
@@ -9,7 +9,79 @@
 </head>
 
 <body>
+	<nav class="nav">
+		<div class="container">
+			<div class="nav__grid">
+				<div>
+					<ul class="nav-list">
+						<li>
+							<a href="" class="nav-list__link">home</a>
+						</li>
+						<li>
+							<a href="" class="nav-list__link">about</a>
+						</li>
+						<li>
+							<a href="" class="nav-list__link">services</a>
+						</li>
+						<li>
+							<a href="" class="nav-list__link">contact</a>
+						</li>
+					</ul>
 
+				</div>
+				<div class="nav__logo logo">
+					<a class="logo__link" href="index.html">
+						<img class="logo__image" src="images/logo.svg" alt="Pawfections">
+					</a>
+				</div>
+				<div class="nav__btn">
+					<a href="#!" class="btn">Book</a>
+				</div>
+			</div>
+		</div>
+	</nav>
+	<header class="header">
+		<div class="container">
+			<div class="header__grid">
+				<div class="header__round-text">
+					<img src="./images/header/round-text.png" srcset="./images/header/round-text@2x.png"
+						alt="Where your pet is our priority">
+				</div>
+				<div class="header__col">
+					<div class="scroll-text">Scroll to discover</div>
+				</div>
+				<div class="header__content">
+
+					<div class="header__image-wrapper">
+						<div class="header__img">
+							<p class="header__title header__title--img">
+								Woof! <br> Doggie Wash
+							</p>
+							<img src="./images/header/main-image.jpg" srcset="./images/header/main-image@2x.jpg"
+								alt="Woof! Doggie Wash">
+						</div>
+						<h1 class="header__title header__title--black">
+							Woof! <br> Doggie Wash
+						</h1>
+					</div>
+
+					<div class="header__desc">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor eu,
+							sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at.
+						</p>
+					</div>
+
+				</div>
+				<div class="header__col">
+					<div class="scroll-text scroll-text__bullet-right">Scroll to discover</div>
+				</div>
+			</div>
+
+		</div>
+
+
+	</header>
 </body>
 
 </html>
