main : section ,services-pics, section-pane. (desctop )

--- a/index.html
+++ b/index.html
@@ -82,6 +82,106 @@
 
 
 	</header>
+	<main>
+		<section class="section">
+			<div class="container">
+				<div class="section__grid">
+					<div class="section__col">
+						<h2 class="title">
+							We treat your pet as a family member
+						</h2>
+						<div class="section__text">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor eu,
+								sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at.
+							</p>
+						</div>
+						<a href="#!" class="btn">Discover</a>
+					</div>
+					<div class="section__col">
+						<div class="img-round-horizontal-wrapper">
+							<img class="img-round-horizontal" src="./images/content/treat.jpg" srcset="./images/content/treat@2x.jpg"
+								alt="Treat pets">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="services-pics">
+			<div class="container container--small">
+				<div class="services-pics__grid">
+					<div class="service-block">
+						<img class="service-block__img" src="images/content/cat-01.svg" alt="Pawdicure">
+						<h3 class="service-block__title">Pawdicure</h3>
+					</div>
+					<div class="service-block">
+						<img class="service-block__img" src="images/content/cat-02.svg" alt="Spa Baths">
+						<h3 class="service-block__title">Spa Baths</h3>
+					</div>
+					<div class="service-block">
+						<img class="service-block__img" src="images/content/cat-03.svg" alt="Haircut of Choice">
+						<h3 class="service-block__title">Haircut of Choice</h3>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section-pane">
+			<div class="container">
+				<img src="./images/content/pane.png" srcset="./images/content/pane@2x.png" alt="collage of animals">
+			</div>
+		</section>
+
+		<section class="section">
+			<div class="container">
+				<div class="section__grid section__grid--paw">
+					<div class="section__col">
+						<h2 class="title">
+							Qualified personal care for all breeds
+						</h2>
+						<div class="section__text">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor eu,
+								sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at.
+							</p>
+						</div>
+						<a href="#!" class="btn">Discover</a>
+					</div>
+					<div class="section__col">
+						<h3 class="paw-title">All full grooms include</h3>
+						<ul class="paw-list">
+							<li>
+								A Warm Massage Jet Wash
+							</li>
+							<li>
+								Fluff Dry
+							</li>
+							<li>
+								Nails Trimmed
+							</li>
+							<li>
+								Paw Pads Shaved
+							</li>
+							<li>
+								Ear Cleaning
+							</li>
+							<li>
+								Haircut of Choice
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section-pane">
+			<div class="container">
+				<img src="./images/content/pane-02.png" srcset="./images/content/pane-02@2x.png" alt="collage of animals">
+			</div>
+		</section>
+
+	</main>
 </body>
 
 </html>
