add slider swiper

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pet SPA</title>
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -181,7 +182,64 @@
 			</div>
 		</section>
 
+		<section class="section-slider">
+			<div class="container">
+
+
+
+				<!-- Slider main container -->
+				<div class="swiper">
+					<!-- Additional required wrapper -->
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<section class="slide-item swiper-slide">
+							<img class="slide-item__img" src="./images/slider/slider-img.svg" alt="Slider image">
+							<div class="slide-item__text">
+								<p>
+									“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor
+									eu,
+									sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at. Aliquam semper ante
+									libero, non pharetra enim lacinia malesuada.”
+								</p>
+							</div>
+							<h2 class="slide-item__name">Quisque mattis</h2>
+						</section>
+						<section class="slide-item swiper-slide">
+							<img class="slide-item__img" src="./images/slider/slider-img.svg" alt="Slider image">
+							<div class="slide-item__text">
+								<p>
+									“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor
+									eu,
+									sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at. Aliquam semper ante
+									libero, non pharetra enim lacinia malesuada.”
+								</p>
+							</div>
+							<h2 class="slide-item__name">Quisque mattis</h2>
+						</section>
+						<section class="slide-item swiper-slide">
+							<img class="slide-item__img" src="./images/slider/slider-img.svg" alt="Slider image">
+							<div class="slide-item__text">
+								<p>
+									“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue eros, pellentesque nec tempor
+									eu,
+									sollicitudin at dolor. Cras commodo venenatis diam, nec venenatis massa auctor at. Aliquam semper ante
+									libero, non pharetra enim lacinia malesuada.”
+								</p>
+							</div>
+							<h2 class="slide-item__name">Quisque mattis</h2>
+						</section>
+					</div>
+					<!-- If we need navigation buttons -->
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
+				</div>
+				<!-- ENDSlider -->
+			</div>
+		</section>
+
 	</main>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
