add main desctop

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			</div>
 		</div>
 	</nav>
+
 	<header class="header">
 		<div class="container">
 			<div class="header__grid">
@@ -78,11 +79,9 @@
 					<div class="scroll-text scroll-text__bullet-right">Scroll to discover</div>
 				</div>
 			</div>
-
 		</div>
-
-
 	</header>
+
 	<main>
 		<section class="section">
 			<div class="container">
@@ -185,8 +184,6 @@
 		<section class="section-slider">
 			<div class="container">
 
-
-
 				<!-- Slider main container -->
 				<div class="swiper">
 					<!-- Additional required wrapper -->
@@ -237,7 +234,36 @@
 			</div>
 		</section>
 
+		<setion class="section-pane-footer">
+			<div class="container">
+				<div class="pane-footer">
+
+					<div class="pane-footer__img">
+						<img src="./images/pane-footer/01.jpg" srcset="./images/pane-footer/01@2x.jpg" alt="Pet image in collage">
+					</div>
+					<div class="pane-footer__img pane-footer__img--big">
+						<img src="./images/pane-footer/02.jpg" srcset="./images/pane-footer/02@2x.jpg" alt="Pet image in collage">
+					</div>
+					<div class="pane-footer__img">
+						<img src="./images/pane-footer/03.jpg" srcset="./images/pane-footer/03@2x.jpg" alt="Pet image in collage">
+					</div>
+					<div class="pane-footer__img pane-footer__img--big">
+						<img src="./images/pane-footer/04.jpg" srcset="./images/pane-footer/04@2x.jpg" alt="Pet image in collage">
+					</div>
+					<div class="pane-footer__img">
+						<img src="./images/pane-footer/05.jpg" srcset="./images/pane-footer/05@2x.jpg" alt="Pet image in collage">
+					</div>
+
+				</div>
+			</div>
+		</setion>
+
 	</main>
+
+	<footer></footer>
+
+
+
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<script type="module" src="./js/main.js"></script>
 </body>
