--- a/index.html
+++ b/index.html
@@ -257,12 +257,62 @@
 				</div>
 			</div>
 		</setion>
-
 	</main>
 
-	<footer></footer>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__conternt">
+				<div class="footer__logo logo">
+					<a class="logo__link logo__link--footer" href="index.html">
+						<img class="logo__image" src="images/footer/footer-logo.svg" alt="Pawfections">
+					</a>
+				</div>
+				<div class="footer__nav-wrapper">
+					<div class="footer__nav">
+						<h3 class="footer__nav-title">Menu</h3>
+						<ul class="footer__nav-list">
+							<li>
+								<a href="#!">Home</a>
+							</li>
+							<li>
+								<a href="#!">About</a>
+							</li>
+							<li>
+								<a href="#!">Services</a>
+							</li>
+							<li>
+								<a href="#!">Contact</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer__nav footer__nav--contacts">
+						<h3 class="footer__nav-title">Contact</h3>
+						<p>
+							Pawfections@contact.com
+						</p>
+						<p>
+							+012-345-6789
+						</p>
+						<p>
+							9889 Lorem Ipsum street, Pellentesque, CA, USA
+						</p>
+					</div>
+				</div>
+			</div>
 
-
+			<div class="footer__copyrigth">
+				<p>Copyright Dotcreativemarket</p>
+				<ul class="footer__copyrigth-list">
+					<li>
+						<a href="#!">Terms of Use</a>
+					</li>
+					<li>
+						<a href="#!">Privacy Policy</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<script type="module" src="./js/main.js"></script>
