image optimization, html validation , add hover and active

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pet SPA</title>
 	<link rel="stylesheet" href="./css/main.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 
 <body>
+
 	<nav class="nav">
 		<div class="container">
 			<div class="nav__grid">
@@ -32,7 +33,7 @@
 				</div>
 				<div class="nav__logo logo">
 					<a class="logo__link" href="index.html">
-						<img class="logo__image" src="images/logo.svg" alt="Pawfections">
+						<img class="logo__image" src="images/svg/logo.svg" alt="Pawfections">
 					</a>
 				</div>
 				<div class="nav__btn">
@@ -46,7 +47,7 @@
 		<div class="container">
 			<div class="header__grid">
 				<div class="header__round-text">
-					<img src="./images/header/round-text.png" srcset="./images/header/round-text@2x.png"
+					<img src="./images/header/disktop/round-text.png" srcset="./images/header/disktop/round-text@2x.png"
 						alt="Where your pet is our priority">
 				</div>
 				<div class="header__col">
@@ -59,7 +60,7 @@
 							<p class="header__title header__title--img">
 								Woof! <br> Doggie Wash
 							</p>
-							<img src="./images/header/main-image.jpg" srcset="./images/header/main-image@2x.jpg"
+							<img src="./images/header/disktop/main-image.jpg" srcset="./images/header/disktop/main-image@2x.jpg"
 								alt="Woof! Doggie Wash">
 						</div>
 						<h1 class="header__title header__title--black">
@@ -83,6 +84,7 @@
 	</header>
 
 	<main>
+
 		<section class="section">
 			<div class="container">
 				<div class="section__grid">
@@ -100,8 +102,8 @@
 					</div>
 					<div class="section__col">
 						<div class="img-round-horizontal-wrapper">
-							<img class="img-round-horizontal" src="./images/content/treat.jpg" srcset="./images/content/treat@2x.jpg"
-								alt="Treat pets">
+							<img class="img-round-horizontal" src="images/content/desktop/treat.jpg"
+								srcset="./images/content/desktop/treat@2x.jpg" alt="Treat pets">
 						</div>
 					</div>
 				</div>
@@ -127,11 +129,12 @@
 			</div>
 		</section>
 
-		<section class="section-pane">
+		<div class="section-pane">
 			<div class="container">
-				<img src="./images/content/pane.png" srcset="./images/content/pane@2x.png" alt="collage of animals">
+				<img src="./images/content/desktop/pane.png" srcset="./images/content/desktop/pane@2x.jpg"
+					alt="collage of animals">
 			</div>
-		</section>
+		</div>
 
 		<section class="section">
 			<div class="container">
@@ -175,13 +178,14 @@
 			</div>
 		</section>
 
-		<section class="section-pane">
+		<div class="section-pane">
 			<div class="container">
-				<img src="./images/content/pane-02.png" srcset="./images/content/pane-02@2x.png" alt="collage of animals">
+				<img src="./images/content/desktop/pane-02.png" srcset="./images/content/desktop/pane-02@2x.png"
+					alt="collage of animals">
 			</div>
-		</section>
+		</div>
 
-		<section class="section-slider">
+		<div class="section-slider none">
 			<div class="container">
 
 				<!-- Slider main container -->
@@ -232,39 +236,44 @@
 				</div>
 				<!-- ENDSlider -->
 			</div>
-		</section>
+		</div>
 
-		<setion class="section-pane-footer">
+		<div class="section-pane-footer">
 			<div class="container">
 				<div class="pane-footer">
 
 					<div class="pane-footer__img">
-						<img src="./images/pane-footer/01.jpg" srcset="./images/pane-footer/01@2x.jpg" alt="Pet image in collage">
+						<img src="./images/pane-footer/desktop/01.jpg" srcset="./images/pane-footer/desktop/01@2x.jpg"
+							alt="Pet image in collage">
 					</div>
 					<div class="pane-footer__img pane-footer__img--big">
-						<img src="./images/pane-footer/02.jpg" srcset="./images/pane-footer/02@2x.jpg" alt="Pet image in collage">
+						<img src="./images/pane-footer/desktop/02.jpg" srcset="./images/pane-footer/desktop/02@2x.jpg"
+							alt="Pet image in collage">
 					</div>
 					<div class="pane-footer__img">
-						<img src="./images/pane-footer/03.jpg" srcset="./images/pane-footer/03@2x.jpg" alt="Pet image in collage">
+						<img src="./images/pane-footer/desktop/03.jpg" srcset="./images/pane-footer/desktop/03@2x.jpg"
+							alt="Pet image in collage">
 					</div>
 					<div class="pane-footer__img pane-footer__img--big">
-						<img src="./images/pane-footer/04.jpg" srcset="./images/pane-footer/04@2x.jpg" alt="Pet image in collage">
+						<img src="./images/pane-footer/desktop/04.jpg" srcset="./images/pane-footer/desktop/04@2x.jpg"
+							alt="Pet image in collage">
 					</div>
 					<div class="pane-footer__img">
-						<img src="./images/pane-footer/05.jpg" srcset="./images/pane-footer/05@2x.jpg" alt="Pet image in collage">
+						<img src="./images/pane-footer/desktop/05.jpg" srcset="./images/pane-footer/desktop/05@2x.jpg"
+							alt="Pet image in collage">
 					</div>
-
 				</div>
 			</div>
-		</setion>
+		</div>
 	</main>
+
 
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__conternt">
 				<div class="footer__logo logo">
 					<a class="logo__link logo__link--footer" href="index.html">
-						<img class="logo__image" src="images/footer/footer-logo.svg" alt="Pawfections">
+						<img class="logo__image" src="./images/svg/footer-logo.svg" alt="Pawfections">
 					</a>
 				</div>
 				<div class="footer__nav-wrapper">
@@ -272,30 +281,36 @@
 						<h3 class="footer__nav-title">Menu</h3>
 						<ul class="footer__nav-list">
 							<li>
-								<a href="#!">Home</a>
+								<a class="footer__link" href="#!">Home</a>
 							</li>
 							<li>
-								<a href="#!">About</a>
+								<a class="footer__link" href="#!">About</a>
 							</li>
 							<li>
-								<a href="#!">Services</a>
+								<a class="footer__link" href="#!">Services</a>
 							</li>
 							<li>
-								<a href="#!">Contact</a>
+								<a class="footer__link" href="#!">Contact</a>
 							</li>
 						</ul>
 					</div>
 					<div class="footer__nav footer__nav--contacts">
 						<h3 class="footer__nav-title">Contact</h3>
-						<p>
-							Pawfections@contact.com
-						</p>
-						<p>
-							+012-345-6789
-						</p>
-						<p>
-							9889 Lorem Ipsum street, Pellentesque, CA, USA
-						</p>
+						<div class="footer__nav-text">
+							<p>
+								Pawfections@contact.com
+							</p>
+						</div>
+						<div class="footer__nav-text">
+							<a class="footer__link" href="tel:0123456789">
+								+012-345-6789
+							</a>
+						</div>
+						<div class="footer__nav-text">
+							<p>
+								9889 Lorem Ipsum street, Pellentesque, CA, USA
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -304,10 +319,10 @@
 				<p>Copyright Dotcreativemarket</p>
 				<ul class="footer__copyrigth-list">
 					<li>
-						<a href="#!">Terms of Use</a>
+						<a class="footer__link" href="#!">Terms of Use</a>
 					</li>
 					<li>
-						<a href="#!">Privacy Policy</a>
+						<a class="footer__link" href="#!">Privacy Policy</a>
 					</li>
 				</ul>
 			</div>
